--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,8 @@
 plugins {
     // Apply the java-library plugin to add support for Java Library
     id 'java-library'
+    id 'java'
+    id 'application'
 }
 
 dependencies {
@@ -27,7 +29,10 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
+    macenCentral()
 }
+
+sourceCompatibility = 1.8
 
 jar {
     manifest {
