--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ repositories {
     // Use jcenter for resolving your dependencies.
     // You can declare any Maven/Ivy/file repository here.
     jcenter()
-    macenCentral()
+    mavenCentral()
 }
 
 sourceCompatibility = 1.8
