--- a/build.gradle
+++ b/build.gradle
@@ -34,6 +34,8 @@ repositories {
 
 sourceCompatibility = 1.8
 
+mainClassName = 'mylib/Main'
+
 jar {
     manifest {
         attributes 'Main-Class' : 'mylib/Main'
